fix nav wrapping

--- a/css/custom.css
+++ b/css/custom.css
@@ -243,8 +243,8 @@ body.stretched #header.full-header .container {
         padding-right:6px;
     }
     #logo img {
-        padding-top:10px;
-        padding-bottom:10px;
+        padding-top:7px;
+        padding-bottom:14px;
     }
 }
 @media (max-width:1190px) {
@@ -260,6 +260,10 @@ body.stretched #header.full-header .container {
     #logo img {
         padding-top:15px;
         padding-bottom:15px;
+    }
+    #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img {
+        padding-top:5px;
+        padding-bottom:10px;
     }
 }
 #header.sticky-header:not(.static-sticky), #header.sticky-header:not(.static-sticky) #header-wrap, #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img {
